--- a/index.html
+++ b/index.html
@@ -58,11 +58,20 @@
 					დღეს უკვე Lorem Ipsum-პასაჟის უამრავი ვერსია არსებობს. მათი დიდი ნაწილი ხუმრობით არის შეცვლილი, ბევრი კი უბრალოდ სიტყვების შემთხვევითი გენერირებით დაიწერა. ინტერნეტში არსებული გენერატორები, როგორც წესი, წინასწარ განსაზღვრული ტექსტის ნაგლეჯს იმეორებენ ხოლმე, ამიტომ ეს პირველი ნამდვილი გენერატორია. იგი რთული და მართებული სტრუქტურის წინადადებების ასაწყობად 200-მდე ლათინური სიტყვისგან შემდგარ ლექსიკონს იყენებს. შედეგად მიიღება ტექსტი, რომელიც ვიზუალურად მაქსიმალურად ახლოსაა რეალურთან. გენერირებული Lorem Ipsum არასოდეს არ არის გამეორებადი, შემთხვევითი სიტყვების ან ხუმრობების შემცველი.
 				</p>
 			</div>
+
 			<a href="#" class="moreinfo">დამატებითი ინფორმაცია </a>
 		</section>
 		<!-- End Section -->
 		<!-- Footer -->
-		
+		<footer class="footer">
+			<p>
+				ყველა უფლება დაცულია
+			</p>
+			<p>
+				დამზადებულია <img src="images/6.png"> -ით
+			</p>
+			<img src="images/7.png">
+		</footer>
 		<!-- End Footer -->
 	</body>
 </html>	
